Added save button, save directory function, and updated FileProvider method

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,4 +11,9 @@
   <ion-fab bottom right padding>
     <button ion-fab color="primary" (click)="openDir()"><ion-icon name="folder"></ion-icon></button>
   </ion-fab>
+  <ion-fab bottom left padding>
+		  <button ion-fab color="secondary" (click)="saveDir()">
+				  <ion-icon name="arrow-dropdown-circle"></ion-icon>
+		  </button>
+  </ion-fab>
 </ion-split-pane>
