ability to change directives with buttons and hotkeys

--- a/src/pages/item/item.scss
+++ b/src/pages/item/item.scss
@@ -26,3 +26,12 @@ page-item {
   position:absolute;
   z-index:1;
 }
+
+.button-text {
+  padding: 10px;
+}
+
+
+.activated-button {
+  background: mediumspringgreen;
+}
