line stuff and fixes

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #006233,
-  secondary:  #32db64,
+  secondary:  #f3ab01,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
