Adding boxes and lines list

--- a/src/pages/item/item.scss
+++ b/src/pages/item/item.scss
@@ -35,3 +35,15 @@ page-item {
 .activated-button {
   background: #f3ab01;
 }
+
+.labels-div {
+	position: relative;
+	float: left;
+
+	margin: 0;
+
+
+	border: solid;
+	border-width: 1px;
+	border-color: red;
+}
