Fab button fixes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,15 +17,16 @@
   <ion-nav [root]="detailPage" #detailNav main></ion-nav>
 
 
-    <ion-fab bottom right padding>
-        <button ion-fab><ion-icon name="add"></ion-icon></button>
-        <ion-fab-list side="top">
-            <button ion-fab color="secondary" (click)="openDir()"><ion-icon name="folder"></ion-icon></button>
-            <button ion-fab color="secondary" (click)="saveDir()">
-                <ion-icon name="arrow-dropdown-circle"></ion-icon>
-            </button>
-        </ion-fab-list>
-    </ion-fab>
-
+    <div class="fixed-content" style="margin-top: 44px;">
+        <ion-fab bottom right>
+            <button ion-fab><ion-icon name="add"></ion-icon></button>
+            <ion-fab-list side="top" class="fab-list-active">
+                <button ion-fab color="secondary" (click)="openDir()"><ion-icon name="folder"></ion-icon></button>
+                <button ion-fab color="secondary" (click)="saveDir()">
+                    <ion-icon name="md-download"></ion-icon>
+                </button>
+            </ion-fab-list>
+        </ion-fab>
+    </div>
 
 </ion-split-pane>
