--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -26,3 +26,12 @@
     display: block;
   }
 }
+
+.fixed-content {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  display: block;
+}
