Even more...more styling changes!

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,7 +17,7 @@
   <ion-nav [root]="detailPage" #detailNav main></ion-nav>
 
 
-    <ion-fab bottom right>
+    <ion-fab padding bottom right>
         <button ion-fab><ion-icon name="add"></ion-icon></button>
         <ion-fab-list side="top" class="fab-list-active">
             <button ion-fab color="secondary" (click)="openDir()"><ion-icon name="folder"></ion-icon></button>
