--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,11 +34,11 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #006233,
-  secondary:  #f3ab01,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  primary: #4c50ed,
+  secondary: #05b7f3,
+  danger: #f66f60,
+  light:      #fcebbf,
+  dark: #43474d
 );
 
 
