--- a/src/components/object-input/object-input.scss
+++ b/src/components/object-input/object-input.scss
@@ -3,5 +3,9 @@ object-input {
 }
 
 .id-label-input {
-  border: 1px solid rgba(78, 255, 110, 0.42);
+  border: 1px solid rgba(161, 211, 255, 0.42);
+}
+
+.id-label-input:focus {
+  border: 1px solid rgba(56, 255, 59, 0.67);
 }
