removed some console log statements

--- a/src/components/object-input/object-input.html
+++ b/src/components/object-input/object-input.html
@@ -9,4 +9,6 @@
                 <input (focus)="onFocus()" class="id-label-input" placeholder="name" [(ngModel)]="newValue"/>
             </ion-col>
         </ion-row>
+    </div>
+
 </ion-item>
