added using last saved label

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,7 +21,7 @@
         <button ion-fab><ion-icon name="add"></ion-icon></button>
         <ion-fab-list side="top" class="fab-list-active">
             <button ion-fab color="secondary" (click)="openDir()"><ion-icon name="folder"></ion-icon></button>
-            <button ion-fab color="secondary" (click)="saveDir()">
+            <button ion-fab color="secondary" (click)="saveFile()">
                 <ion-icon name="md-download"></ion-icon>
             </button>
         </ion-fab-list>
