added using last saved label

--- a/src/components/object-input/object-input.scss
+++ b/src/components/object-input/object-input.scss
@@ -13,6 +13,10 @@ object-input {
   border: 1px solid rgba(56, 255, 59, 0.67);
 }
 
+.editing {
+  border: 1px solid rgba(255, 8, 28, 0.67)!important;
+}
+
 .label-md {
   margin: 0!important;
 }
