- Now saving labels when the user clicks away from the input - The user no longer moves points from other objects when drawing - Saving the annotation now uses the .JSON file extension

--- a/src/components/object-input/object-input.html
+++ b/src/components/object-input/object-input.html
@@ -2,11 +2,11 @@
     <div (ionBlur)="accept()">
         <ion-row>
             <ion-col col-2>
-                <input (focus)="onFocus()" class="id-label-input" placeholder="id" [(ngModel)]="newId"/>
+                <input (blur)="onBlur($event)" (focus)="onFocus()" class="id-label-input" placeholder="id" [(ngModel)]="newId"/>
             </ion-col>
 
             <ion-col col-10>
-                <input (focus)="onFocus()" class="id-label-input" placeholder="name" [(ngModel)]="newValue"/>
+                <input (blur)="onBlur($event)" (focus)="onFocus()" class="id-label-input" placeholder="name" [(ngModel)]="newValue"/>
             </ion-col>
         </ion-row>
     </div>
