asking for discarding unsaved changes now

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,7 +26,7 @@
             <button ion-fab color="secondary" (click)="openDir()">
                 <ion-icon name="folder"></ion-icon>
             </button>
-            <button ion-fab color="secondary" (click)="saveFile()">
+            <button ion-fab color="secondary" (click)="saveFileDialog()">
                 <ion-icon name="md-download"></ion-icon>
             </button>
         </ion-fab-list>
