added image scaling setting

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,8 +6,8 @@
     </ion-header>
     <ion-content>
         <ion-list>
-            <button ion-item (click)="openHotkeysForm()">
-                Keybindings
+            <button ion-item (click)="openSettingsForm()">
+                Settings
             </button>
             <button ion-item (click)="readAnnotations()">Load Annotations</button>
         </ion-list>
