--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -37,7 +37,7 @@ $colors: (
   primary: #4c50ed,
   secondary: #05b7f3,
   danger: #f66f60,
-  light:      #fcebbf,
+  light: #eafdff,
   dark: #43474d
 );
 
