- Added a feature that allows the user to pre-fill a bunch of labels that are linked with hotkey, and automatically rename the selected element using a hotkey - Newly-drawn elements are now selected

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,6 +10,7 @@
                 Settings
             </button>
             <button ion-item (click)="readAnnotations()">Load Annotations</button>
+            <button ion-item (click)="openAutoLabelPage()">Auto Labels</button>
         </ion-list>
     </ion-content>
 </ion-menu>
